Remove harmony flags

--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"start": "node --harmony --harmony_destructuring server.js"
+		"start": "node server.js"
 	},
 	"dependencies": {
 		"express": "^4.12.4"
-	},
-	"engines": {
-		"node": "4.4.3"
 	},
 	"repository": {
 		"type": "git",
